Update mod for support of all setting types